--- a/4a.html
+++ b/4a.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script type="text/javascript">
-function calc(sgpa,n)
+function calcC(sgpa,n)
 {
 	s=0
 	for(i=0;i<n;i++)
@@ -13,13 +13,27 @@ function calc(sgpa,n)
 	}
 	cgpaClosure()
 }
+function calcS(sgpa,n)
+{
+	function sgpaClosure()
+	{
+	for(i=0;i<n;i++)
+	{
+		c=parseInt(prompt("Enter the total credits in the "+(i+1)+" semester"))
+		o=parseInt(prompt("Enter the credits earned in the "+(i+1)+" semester"))
+		sgpa[i]=o/c*10
+	}
+	for(i=0;i<n;i++)
+	alert("SGPA "+(i+1)+"= "+sgpa[i])
+	}
+	sgpaClosure()
+}
 </script>
 <body>
 <script type="text/javascript">
 var sgpa=new Array(10)
 n=parseInt(prompt("Enter the no. of semesters completed"))
-for(i=0;i<n;i++)
-sgpa[i]=parseFloat(prompt("Enter sgpa of "+(i+1)+"semester"))
-calc(sgpa,n)
+calcS(sgpa,n)
+calcC(sgpa,n)
 </script>
 </html>	
